--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
+    "prettier": "^3.0.2",
     "prisma": "^4.15.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.2",
