--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.12",
-    "next": "13.4.3",
+    "next": "^13.5.4",
     "next-contentlayer": "^0.3.2",
+    "next-intl": "^3.0.0-rc.2",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
