--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "next": "^13.5.1",
     "next-contentlayer": "^0.3.2",
     "next-intl": "^3.0.0-beta.19",
-    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "rehype-autolink-headings": "^6.1.1",
+    "react-wrap-balancer": "^1.1.0",
     "rehype-pretty-code": "^0.9.5",
-    "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.2",
     "swr": "^2.1.5",
