--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./src/*"],
       "contentlayer/generated": ["./.contentlayer/generated"],
-      "@/*": ["./src/*"]
     },
   },
   "include": [
