feat: update all stuff

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.12",
+    "image-size": "^1.0.2",
     "next": "^13.5.1",
     "next-contentlayer": "^0.3.2",
     "next-intl": "^3.0.0-beta.19",
+    "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
