--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-use": "^17.4.0",
     "react-wrap-balancer": "^1.1.0",
     "rehype-pretty-code": "^0.9.5",
     "remark-gfm": "^3.0.1",
