--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,9 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,ts,jsx,tsx,mdx,html,css}]
+[*.{js,ts,jsx,tsx,mdx,html,css,json}]
 charset = utf-8
 indent_style = tab
 indent_size = 2
