--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.2.1",
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.12.12",
     "next": "^14.0.1",
     "next-contentlayer": "^0.3.2",
