--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,ts,jsx,tsx,mdx,html,css,json}]
+[*.{js,mjs,ts,jsx,tsx,mdx,html,css,json}]
 charset = utf-8
 indent_style = tab
 indent_size = 2
