--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^10.12.12",
     "next": "^14.0.1",
     "next-contentlayer": "^0.3.2",
-    "next-intl": "^3.0.0-rc.10",
+    "next-intl": "^3.2.4",
     "octokit": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
