--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-use": "^17.4.0",
     "rehype-pretty-code": "^0.9.5",
     "remark-gfm": "^3.0.1",
+    "rss": "^1.2.2",
     "sharp": "^0.32.6",
     "shiki": "^0.14.2",
     "swr": "^2.1.5",
@@ -40,6 +41,7 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
