--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.12",
     "next": "^14.0.1",
+    "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.2",
     "next-intl": "^3.2.4",
     "octokit": "^3.1.2",
