feat: migrate npm to pnpm

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@giscus/react": "^2.3.0",
+    "@mdx-js/react": "^3.0.1",
     "@prisma/client": "^4.15.0",
     "clsx": "^1.2.1",
     "contentlayer": "^0.3.2",
