--- a/package.json
+++ b/package.json
@@ -8,21 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "overrides": {
-    "next-contentlayer": {
-      "next": "$next"
-    }
-  },
   "dependencies": {
     "@giscus/react": "^2.3.0",
     "@mdx-js/react": "^3.0.1",
     "@prisma/client": "^4.15.0",
     "clsx": "^1.2.1",
-    "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.12",
     "next": "^14.0.1",
-    "next-contentlayer": "^0.3.2",
     "next-intl": "^3.2.4",
     "octokit": "^3.1.2",
     "react": "18.2.0",
@@ -54,6 +47,7 @@
     "prisma": "^4.15.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "velite": "0.1.0-beta.12"
   }
 }
