fix: update package.json scripts

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build",
+    "dev": "pnpm velite --watch & next dev",
+    "build": "prisma generate && pnpm velite build && next build",
     "start": "next start",
     "lint": "next lint"
   },
