--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "rss": "^1.2.2",
     "sharp": "^0.32.6",
     "shiki": "1.2.0",
-    "swr": "^2.1.5",
-    "unist-util-visit": "^4.1.2"
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
