--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,17 +1,28 @@
-name: Lighthouse
+name: LIGHTHOUSE CI
 on: [push]
 
 jobs:
-  lighthouseci:
+  lhci:
+    name: Lighthouse
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Install pnpm
-        run: npm install -g pnpm
-      - run: pnpm install && pnpm add -g @lhci/cli@0.13.x
-      - run: pnpm run build
-      - run: lhci autorun
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: npm install, build
+        run: |
+          npm install
+          npm run build
+
+      - name: run Lighthouse CI
+        run: |
+          npm install -g @lhci/cli@0.13.x
+          lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
