--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -8,10 +8,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: npm install && npm install -g @lhci/cli@0.13.x
+          node-version: 19
+      - run: npm install -g pnpm && pnpm add -g @lhci/cli@0.13.x
       - run: pnpm run build
-      - run: lhci collect
-      - run: lhci upload
+      - run: lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
