--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: Install, Build
+        run: pnpm install & pnpm add -g @lhci/cli@0.13.x
 
       - name: Build packages
         run: pnpm run build
