--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 19
+          node-version: 18
 
-      - name: Install, Build
+      - name: Install dependencies
         run: pnpm install
 
       - name: Build packages
