--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run lighthouseci
         run: |
           pnpm add -g @lhci/cli@0.13.x
-          lhci autorun
+          lhci collect
+          lhci upload
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
