--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@giscus/react": "^2.3.0",
     "@mdx-js/react": "^3.0.1",
     "@prisma/client": "^4.15.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.12",
@@ -27,10 +30,12 @@
     "rss": "^1.2.2",
     "sharp": "^0.32.6",
     "shiki": "1.2.0",
-    "swr": "^2.1.5"
+    "swr": "^2.1.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
