--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# For blog views
 DATABASE_URL=
 
-# For github follwers, total stars and pinnedRepos
+# github
 GITHUB_AUTH_TOKEN=
+
+OAUTH_CLIENT_ID=
+OAUTH_CLIENT_SECRET=
