feat: add jest-related pkgs

--- a/package.json
+++ b/package.json
@@ -1,57 +1,63 @@
 {
-  "name": "tomjin.dev",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "pnpm velite --watch & next dev",
-    "build": "prisma generate && pnpm velite build && next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@giscus/react": "^2.3.0",
-    "@mdx-js/react": "^3.0.1",
-    "@prisma/client": "^4.15.0",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-separator": "^1.0.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.12.12",
-    "next": "^14.0.1",
-    "next-intl": "^3.2.4",
-    "octokit": "^3.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-use": "^17.4.0",
-    "rehype-pretty-code": "0.13.0",
-    "remark-gfm": "^3.0.1",
-    "rss": "^1.2.2",
-    "sharp": "^0.32.6",
-    "shiki": "1.2.0",
-    "swr": "^2.1.5",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "20.2.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "@types/rss": "^0.0.32",
-    "@typescript-eslint/parser": "^5.59.6",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "eslint-plugin-tailwindcss": "^3.12.0",
-    "postcss": "^8.4.23",
-    "postcss-import": "^15.1.0",
-    "prettier": "^3.0.2",
-    "prisma": "^4.15.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4",
-    "velite": "0.1.0-beta.12"
-  }
+	"name": "tomjin.dev",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "pnpm velite --watch & next dev",
+		"build": "prisma generate && pnpm velite build && next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest --watch"
+	},
+	"dependencies": {
+		"@giscus/react": "^2.3.0",
+		"@mdx-js/react": "^3.0.1",
+		"@prisma/client": "^4.15.0",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-separator": "^1.0.3",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^1.2.1",
+		"date-fns": "^2.30.0",
+		"framer-motion": "^10.12.12",
+		"next": "^14.0.1",
+		"next-intl": "^3.2.4",
+		"octokit": "^3.1.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.10.1",
+		"react-use": "^17.4.0",
+		"rehype-pretty-code": "0.13.0",
+		"remark-gfm": "^3.0.1",
+		"rss": "^1.2.2",
+		"sharp": "^0.32.6",
+		"shiki": "1.2.0",
+		"swr": "^2.1.5",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/react": "^15.0.7",
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/jest": "^29.5.12",
+		"@types/node": "20.2.1",
+		"@types/react": "18.2.6",
+		"@types/react-dom": "18.2.4",
+		"@types/rss": "^0.0.32",
+		"@typescript-eslint/parser": "^5.59.6",
+		"autoprefixer": "^10.4.14",
+		"eslint": "8.41.0",
+		"eslint-config-next": "13.4.3",
+		"eslint-plugin-tailwindcss": "^3.12.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"postcss": "^8.4.23",
+		"postcss-import": "^15.1.0",
+		"prettier": "^3.0.2",
+		"prisma": "^4.15.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss": "^3.3.2",
+		"typescript": "5.0.4",
+		"velite": "0.1.0-beta.12"
+	}
 }
