--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"],
-			"@/.velite": ["./.velite"]
+			"@/content": ["./.velite"]
 		}
 	},
 	"include": [
