--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "prisma generate && pnpm velite build && next build",
 		"start": "next start",
 		"lint": "next lint",
-		"test": "jest --watch"
+		"test": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"pnpm": {
 		"supportedArchitectures": {
