chore: update alias of tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
 		"types": ["@testing-library/jest-dom"],
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"],
+			"@/*": ["src/*"],
 			"@/content": ["./.velite"]
 		}
 	},
