--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -23,10 +23,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Add Comment to PR
+        # Signal that a lighthouse run is about to start
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          node-version: 20
+          message: |
+            Running Lighthouse audit...
+          # Used later to edit the existing comment
+          comment_tag: 'lighthouse_audit'
 
       - name: Capture Vercel Preview
         uses: patrickedqvist/wait-for-vercel-preview@v1.3.0
@@ -37,6 +41,7 @@ jobs:
 
       - name: Audit Preview URL with Lighthouse
         uses: treosh/lighthouse-ci-action@v11
+        id: lighthouse_audit
         with:
           configPath: './.lighthouserc.json'
           urls:
