--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -38,7 +38,7 @@ jobs:
           comment_tag: 'lighthouse_audit'
 
       - name: Capture Vercel Preview
-        uses: patrickedqvist/wait-for-vercel-preview@dca4940010f36d2d44caa487087a09b57939b24a
+        uses: patrickedqvist/wait-for-vercel-preview@v1.3.0
         id: vercel_preview_url
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
