--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
+          check_interval: 10
 
       - name: Audit Preview URL with Lighthouse
         uses: treosh/lighthouse-ci-action@v11
