--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -72,7 +72,7 @@ jobs:
             # Run as a separate file so we do not have to inline all of our formatting logic.
             # See https://github.com/actions/github-script#run-a-separate-file for more info.
           script: |
-            const { formatLighthouseResults } = await import('${{github.workspace}}/src/scripts/lighthouse/index.ts')
+            const { formatLighthouseResults } = await import('${{github.workspace}}/src/scripts/lighthouse/index.mjs')
             await formatLighthouseResults({core})
 
       - name: Add Comment to PR
