--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"clsx": "^1.2.1",
 		"framer-motion": "^10.12.12",
 		"next": "^14.0.1",
+		"next-auth": "5.0.0-beta.19",
 		"next-intl": "^3.2.4",
 		"octokit": "^3.1.2",
 		"react": "18.2.0",
