update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,9 @@ DATABASE_URL=
 # github
 GITHUB_AUTH_TOKEN=
 
+# https://github.com/settings/developers
 OAUTH_CLIENT_ID=
 OAUTH_CLIENT_SECRET=
+
+# A random value that encrypts tokens and email verification hashes. https://authjs.dev/getting-started/installation?framework=next.js#setup-environment
+AUTH_SECRET=
