update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL=
 GITHUB_AUTH_TOKEN=
 
 # https://github.com/settings/developers
+# To have an Oauth configuration for dev and prod environments, you'll need to register a second Oauth app
 OAUTH_CLIENT_ID=
 OAUTH_CLIENT_SECRET=
 
