--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -56,6 +56,7 @@ jobs:
             ${{ steps.vercel_preview_url.outputs.url }}
             ${{ steps.vercel_preview_url.outputs.url }}/blog
             ${{ steps.vercel_preview_url.outputs.url }}/projects
+            ${{ steps.vercel_preview_url.outputs.url }}/guestbook
             ${{ steps.vercel_preview_url.outputs.url }}/about
           uploadArtifacts: true # save results as a action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
